--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -592,7 +592,7 @@ Sei $(a_n)\colon\N \rightarrow \R$ (reelle Zahlenfolge)
 \end{align*}
 
 \subsubsection{Ganzzahlige Potenzen}
-\[a \in \R \qquad n \in \N \qquad a^1\coloneqqa \qquad a^{n+1}\coloneqqa^na\]
+\[a \in \R \qquad n \in \N \qquad a^1\coloneqq a \qquad a^{n+1}\coloneqqa^na\]
 Erweiterung:
 \begin{align*}
 a \in \R &\qquad n \in \N\\
@@ -655,7 +655,7 @@ Summenformel für die \highl[Reihe!geometrische]{geometrische Reihe}
   \[\bigcup_{n \in \N} A_n \coloneqq \{x \colon \exists n \in \N \colon x \in A\}\]
 \end{theorem}
 \begin{proof}
-  \[A_n \coloneqq\{a_{nm}\colon m\in \N\} \qquad \varphi_n(m)\coloneqqa_{nm} \qquad
+  \[A_n \coloneqq\{a_{nm}\colon m\in \N\} \qquad \varphi_n(m)\coloneqq a_{nm} \qquad
   \varphi_n\colon\N \rightarrow A_n\]
 \end{proof}
 
@@ -1326,7 +1326,7 @@ Jede reelle Zahlenfolge $(a_n) \subset \R$ enthält eine monotone Teilfolge.
     $\exists m_1 \in \N \colon a_{n_1+m_1}>a_{n_1}$. Setzen $n_2 \coloneqq n_1
     +m_1$. Dann $n_2>n_1 \wedge a_{n_2} > a_{n_1}$\\
     $n_2>n_1>k \Rightarrow n_2 \notin M$, d.\,h. $\exists m_2 \in \N \colon
-    a_{n_2+m_2}$. Setzen $n_3\coloneqqn_2+m_2 \Rightarrow
+    a_{n_2+m_2}$. Setzen $n_3\coloneqq n_2+m_2 \Rightarrow
     n_3>n_2 \wedge a_{n_3}>a_{n_2}$\\
     $a_{n_1}<a_{n_2}<a_{n_3}<\ldots$
   \item $M=\emptyset$, d.\,h. $\forall k \in \N \ \exists n \in \N \colon
@@ -1484,11 +1484,12 @@ In $\R$ sind folgende Aussagen äquivalent:
     Sei $b \in \R$ obere Schranke und $a \in M$
     \begin{enumerate}[1. F{a}ll]
       \item $a$ ist obere Schranke von $M \Rightarrow a = \sup M$
-      \item $a$ ist keine obere Schranke von $M$. Wir setzen $a_1\coloneqqa, b_1\coloneqqb$ und bilden das Mittel $\frac{a_1+b_1}{2}$
+      \item $a$ ist keine obere Schranke von $M$. Wir setzen $a_1\coloneqq a, b_1\coloneqqb$ und bilden das Mittel $\frac{a_1+b_1}{2}$
       \begin{enumerate}[{2}.1. F{a}ll]
-        \item $\frac{a_1+b_1}{2}$ ist obere Schranke von $M$, so setzen wir $a_2\coloneqqa_1, b_2\coloneqq\frac{a_1+b_1}{2}$
+        \item $\frac{a_1+b_1}{2}$ ist obere Schranke von $M$, so setzen wir
+	$a_2\coloneqq a_1, b_2\coloneqq\frac{a_1+b_1}{2}$
 	\item $\frac{a_1+b_1}{2}$ ist keine obere Schranke $\Rightarrow M \cap [\frac{a_1+b_1}{2},b_1]\neq \emptyset$
-	  Wählen $a_2 \in M \cap [\frac{a_1+b_1}{2},b_1]$ und $b_2\coloneqqb_1$. In beiden Fällen gilt, dass $M\cap [a_2,b_2]
+	  Wählen $a_2 \in M \cap [\frac{a_1+b_1}{2},b_1]$ und $b_2\coloneqq  b_1$. In beiden Fällen gilt, dass $M\cap [a_2,b_2]
 	  \neq \emptyset$ und $b_2-a_2\leq b_1-\frac{a_1+b_1}{2}=\frac{a_1-b_1}{2}$. Führen wir diese Prozedur fort, so
 	  erhalten wir Intervalle $[a_n,b_n]$ mit $a_n \in M$ und $b_n$ obere Schranke von $M$.\\
 	  $b_n-a_n\leq \frac{a_{n-1}+b_{n-1}}{2}\leq \cdots \leq (\frac{1}{2})^{n-1}(b_1-a_1)\Rightarrow I_n=[a_n,b_n]$
@@ -1533,11 +1534,11 @@ Sei $(X,d)$ ein metrischer Raum
 \begin{definition}
 \label{def:reihe}
 Sei $(a_n) \subset \R$ eine reelle Zahlenfolge. Die Folge
-\[s_n\coloneqq\sum_{k=1}^n a_k \qquad a_k \in \N\] der
+\[s_n\coloneqq \sum_{k=1}^n a_k \qquad a_k \in \N\] der
 Partialsummen\index{Partialsumme} heißt
 \emph{Reihe\index{Reihe}}\footnote{Schreibweise: $\sum_{n=1}^\infty
   (a_n), (\sum_{k=1}^n a_k)_{n\in \N}, \sum_{k=1}^\infty a_k$}.
-Konvergiert $(s_n)$, so heißt $\sum_{k=1}^\infty a_k\coloneqq\lim s_n$
+Konvergiert $(s_n)$, so heißt $\sum_{k=1}^\infty a_k\coloneqq \lim s_n$
 \emph{Summe\index{Reihe!Summe}} oder \emph{Wert\index{Summe!Wert}} der
 Reihe.
 \end{definition}
@@ -1629,11 +1630,11 @@ Reihe
   \end{enumerate}
   \item \textbf{Teleskopsummenkriterium\index{Teleskopsummenkrit.} / Verdichtungskriterium\index{Verdichtungskrit.}} 
     Seien $a_1\geq a_2\geq \ldots \geq a_n\geq 0$. Dann $\sum a_n$ konvergent $\Leftrightarrow \sum 2^n a_{2^n}$ konvergent
-  \item \textbf{Wurzelkriterium\index{Wurzelkrit.}} Sei $\alpha \coloneqq\overline{\lim}\sqrt[n]{|a_n|}$. Dann ist $\sum a_n$
+  \item \textbf{Wurzelkriterium\index{Wurzelkrit.}} Sei $\alpha \coloneqq \overline{\lim}\sqrt[n]{|a_n|}$. Dann ist $\sum a_n$
     konvergent für $\alpha <1$ und divergent für $\alpha >1$. Für $\alpha=1$ existieren sowohl konvergente als auch
     divergente Reihen.
-  \item \textbf{Quotientenkriterium\index{Quotientenkrit.}} Seien $\underline{\beta}\coloneqq\underline{\lim}|\frac{a_{n+1}}{a_n}|,
-    \overline{\beta}\coloneqq\overline{\lim}|\frac{a_{n+1}}{a_n}|$. Dann folgt für $\overline{\beta}<1$, dass $\sum a_n$
+  \item \textbf{Quotientenkriterium\index{Quotientenkrit.}} Seien $\underline{\beta}\coloneqq \underline{\lim}|\frac{a_{n+1}}{a_n}|,
+    \overline{\beta}\coloneqq \overline{\lim}|\frac{a_{n+1}}{a_n}|$. Dann folgt für $\overline{\beta}<1$, dass $\sum a_n$
     konvergent ist und für $\underline{\beta}>1$, dass $\sum a_n$ divergent ist.
 \end{enumerate}
 \end{theorem}
@@ -1647,7 +1648,7 @@ Reihe
         \stackrel{\text{Cauchykrit.}}{\Longrightarrow} \sum |a_k|$ absolut konvergent
       \item Wäre $\sum a_n$ konvergent, folgt darus, dass auch $\sum d_n$ konvergent ist
     \end{enumerate}
-  \item $s_n<a_1+a_2+\cdots +a_n, t_k\coloneqqa_1+2a_2+2^2a_{2^2}+\cdots +2^ka_{2^k}$\\
+  \item $s_n<a_1+a_2+\cdots +a_n, t_k\coloneqq a_1+2a_2+2^2a_{2^2}+\cdots +2^ka_{2^k}$\\
     Für $n\leq 2^k$ gilt $s_n\leq t_k$.\\
     Denn $s_n\leq a_1+(a_2+a_3)+\cdots +(a_{2^k}+a_{2^k+1}+\cdots +a_{2^{k+1}-1})\leq
     a_1+2a_2+\cdots +2^ka_{2^k}=t_k$. Für $n\geq 2^k$ gilt $s_n\geq \frac{1}{2}t_k$.\\
@@ -1662,7 +1663,7 @@ Reihe
 	\varepsilon_0 \Rightarrow 1<\alpha-\varepsilon_0<\sqrt[n_k]{|a_{n_k}|}\Rightarrow 1<|a_{n_k}|$ für $k\geq k_0$
 	Daraus folgt, dass $a_{n_k}$ nicht gegen 0 streben. Daher strebt auch $a_n$ nicht gegen 0. Nach \autoref{satz:konvkrit}
 	folgt, dass auch $\sum a_n$ divergiert.
-      \item Sei $\alpha =\overline{\lim}\sqrt[n]{|a_n|}<1$. Wähle $\beta \colon\alpha<\beta <1, b_n\coloneqq\sup\{\sqrt[k]{|a_k|}\colon k\geq n\}$
+      \item Sei $\alpha =\overline{\lim}\sqrt[n]{|a_n|}<1$. Wähle $\beta \colon\alpha<\beta <1, b_n\coloneqq \sup\{\sqrt[k]{|a_k|}\colon k\geq n\}$
         Für $b_n$ gilt $\lim b_n=\alpha$. Wähle $\varepsilon_0\colon\alpha+\varepsilon_0<\beta$. Dann existiert ein $n_0 \in \N \ 
 	\forall n\geq n_0\colon\alpha -b_n|<\varepsilon_0$. Somit ist $-\varepsilon_0<\alpha -b_n<\varepsilon_0$ für $n\geq n_0
 	\Rightarrow b_n<\alpha +\varepsilon_0$ für $n\geq n_0$. Insobesondere gilt für $n=n_0\colon b_{n_0}<\alpha +\varepsilon_0<
@@ -1670,12 +1671,12 @@ Reihe
 	\stackrel{\beta <1}{\Rightarrow} \sum \beta^k$ ist konvergent $\stackrel{(2)}{\Rightarrow} \sum |a_n|$ konvergent.
 	Diese Summe ist sogar absolut konvergent.
     \end{enumerate}
-  \item $\overline{\beta}\coloneqq\overline{\lim}|\frac{a_{n+1}}{a_n}|<1 \Rightarrow \sum a_n$ konvergent\\
-    $\underline{\beta}\coloneqq\underline{\lim}|\frac{a_{n+1}}{a_n}|>1 \Rightarrow \sum a_n$ divergent\\
+  \item $\overline{\beta}\coloneqq \overline{\lim}|\frac{a_{n+1}}{a_n}|<1 \Rightarrow \sum a_n$ konvergent\\
+    $\underline{\beta}\coloneqq \underline{\lim}|\frac{a_{n+1}}{a_n}|>1 \Rightarrow \sum a_n$ divergent\\
     $\underline{\lim}_n|\frac{a_{n+1}}{a_n}|\leq \underline{\lim}_n \sqrt[n]{|a_n|}\leq \overline{\lim}_n \sqrt[n]{|a_n|}
     \leq \overline{\lim}_n |\frac{a_{n+1}}{a_n}|$\\
-    $b_1\coloneqq\sup \{|a_k|\colon k\geq 1\}\geq |a_1|$\\
-    $b_n\coloneqq\sup \{|\frac{a_{k+1}}{a_k}|\colon k\geq n\}\geq \frac{a_n}{a_{n-1}}|, n\geq 2$\\
+    $b_1\coloneqq \sup \{|a_k|\colon k\geq 1\}\geq |a_1|$\\
+    $b_n\coloneqq \sup \{|\frac{a_{k+1}}{a_k}|\colon k\geq n\}\geq \frac{a_n}{a_{n-1}}|, n\geq 2$\\
     $\overline{\lim}|\frac{a_{n+1}}{a_n}|=\lim b_n$. Dann:\\
     $\sqrt[n]{|a_n|}=\sqrt[n]{|a_1|\cdot \frac{|a_2|}{|a_1|}\cdot \frac{|a_3|}{|a_2|}\cdot \ldots \cdot 
     \frac{|a_{n-1}|}{|a_{n-2}|}\cdot \frac{|a_n|}{|a_{n-1}|}} \leq \sqrt[n]{b_1b_2\ldots b_n}\leq 
@@ -1746,7 +1747,7 @@ Sei $\varepsilon>0$. Dann existiert ein $n_0, n_1 \in \N \colon
   |s_{2n}-s| & \leq & \varepsilon \text{ für } n\geq n_0\\
   |s_{2n+1}-s| &< & \varepsilon \text{ für } n\geq n_1
 \end{array}$\\
-Für $N\coloneqq\max\{2n_0,2n_1+1\}$ gilt: $|s_n-s|<\varepsilon$ für $n\geq N$, d.\,h. $\lim s_n=s$
+Für $N\coloneqq \max\{2n_0,2n_1+1\}$ gilt: $|s_n-s|<\varepsilon$ für $n\geq N$, d.\,h. $\lim s_n=s$
 \qed
 
 \textbf{Beispiel} 
@@ -1775,7 +1776,7 @@ eine \emph{Umordnung\index{Umordnung}} der Reihe $\sum_{k=1}^\infty a_k$.
 Seien $c_n\geq 0$ und $\sum_{n=1}^\infty c_n$ konvergent. Dann gilt $\forall \pi \colon\N\rightarrow \N$ bijektiv
 $\Rightarrow \sum_{k=1}^\infty c_{\pi(k)}$ konvergent und es gilt $\sum_{k=1}^\infty c_k=\sum_{k=1}^\infty c_{\pi(k)}$
 \end{theorem}
-\textbf{Beweis}: Sei $n \in \N, M\coloneqq\max\{\pi(1),\ldots ,\pi(n)\}$\\
+\textbf{Beweis}: Sei $n \in \N, M\coloneqq \max\{\pi(1),\ldots ,\pi(n)\}$\\
 Dann ist $n\leq M$ und es gilt $\sum_{k=1}^n c_{\pi(k)}\leq \sum_{k=1}^M c_k\leq \sum_{k=1}^\infty c_k<\infty 
 \stackrel{c_k\geq 0}{\Rightarrow} \sum_{k=1}^\infty c_{\pi(k)}\leq \sum_{k=1}^\infty c_k$\\
 Obige Aussage auf $\sum_1^\infty c_k=\sum_1^\infty c_{\pi^{-1}(\pi(k))}\leq \sum_1^\infty c_{\pi(k)} \Rightarrow
@@ -1791,8 +1792,8 @@ Ferner gilt: $\sum_{k=1}^\infty a_{\pi(k)}=\sum_{k=1}^\infty a_k \qquad \forall 
 \begin{itemize}
   \item["`$\Rightarrow$"'] Sei $\sum a_n$ absolut konvergent.
     $\begin{array}{rcl}
-      0\leq a_n^+\coloneqq\max\{a_n,0\} & = & \frac{|a_n|+a_n}{2}\leq |a_n|\\
-      0\leq a_n^-\coloneqq\min\{a_n,0\} & = & \frac{|a_n|-a_n}{2}\leq |a_n|
+      0\leq a_n^+\coloneqq \max\{a_n,0\} & = & \frac{|a_n|+a_n}{2}\leq |a_n|\\
+      0\leq a_n^-\coloneqq \min\{a_n,0\} & = & \frac{|a_n|-a_n}{2}\leq |a_n|
     \end{array}$\\
     $\stackrel{\text{Maj.-krit.}}{\Rightarrow} \sum a_n^+, \sum a_n^-$ konvergent\\
     $\stackrel{\text{\autoref{satz:umordnung}}}{\Rightarrow} \sum_1^\infty \sum_1^\infty a_{\pi(k)}^+=\sum_1^\infty a_k^+,
@@ -1807,7 +1808,7 @@ Ferner gilt: $\sum_{k=1}^\infty a_{\pi(k)}=\sum_{k=1}^\infty a_k \qquad \forall 
     \end{array}\right\}\Rightarrow \sum a_k^+=\infty, \sum a_k^-=\infty$\\
     Sei $(a_{\varphi_+(k)})$ Teilfolge aller $a_k>0$ ($a_k\leq 0$ streichen) und $(a_{\varphi_-(k)})$ Teilfolge aller
     $a_k\leq 0$ ($a_k>0$ streichen)\\
-    $s_n^±\coloneqq\sum_{k=1}^n a_k^±, t_n^±\coloneqq\sum_{k=1}^n a_{\varphi_±(k)}$\\
+    $s_n^±\coloneqq \sum_{k=1}^n a_k^±, t_n^±\coloneqq \sum_{k=1}^n a_{\varphi_±(k)}$\\
     $s_n^+\leq t_n^+$ (da $t_n^+$ nur positiv, bei $s_n^+$ kann auch die 0 enthalten sein)\\
     $s_n^-=-t_n^- \Rightarrow \lim_{n\rightarrow \infty}=\sum_1^\infty a_{\varphi_+(k)}=\infty, \lim_{n\rightarrow \infty}
     t_n^-=\sum_1^\infty a_{\varphi_-(k)}=-\infty$ %weitere Beweisfolge mit einbauen
@@ -1874,7 +1875,7 @@ Seien $\sum a_n, \sum b_n$ absolut konvergent. Dann ist das Cauchyprodukt $\sum 
 spezielle Klammerung von $\sum c_n$ ist, gilt $\sum_{n=0}^\infty c_n=\sum_{n=0}^\infty d_n$ nach
 \autoref{satz:RechenregelReihe} Punkt 3.\qed
 
-\paragraph{Bemerkungen zum Cauchyprodukt} für $n\in \N\cup \{0\}$ sei $a_n\coloneqqb_n\coloneqq\frac{(-1)^n}{\sqrt{n+1}}$ und 
+\paragraph{Bemerkungen zum Cauchyprodukt} für $n\in \N\cup \{0\}$ sei $a_n\coloneqq b_n\coloneqq \frac{(-1)^n}{\sqrt{n+1}}$ und 
 $d_n=\sum_{k=0}^n a_kb_{n-k}$. Die Reihen $\sum a_n, \sum b_n$ konvergieren nach dem Leibnitzkriterium. Ihr 
 Cau\-chy\-pro\-dukt konvergiert nicht, denn 
 \begin{align*}
@@ -1892,7 +1893,7 @@ $\Rightarrow |d_n|$ konvergiert nicht gegen $0\Rightarrow d_n \not\rightarrow 0\
 folgt, dass auch $\sum c_n$ divergent ist.
 
 Ein Beispiel für das Cauchyprodukt ist die \emph{Exponentialreihe\index{Exponentialreihe}}:
-\[e^x \coloneqq exp(x)\coloneqq\sum_{n=0}^\infty \frac{x^n}{n!}=1+x+\frac{x^2}{2}+\frac{x^3}{3!}+\cdots +\frac{x^n}{n!}\]
+\[e^x \coloneqq  exp(x)\coloneqq \sum_{n=0}^\infty \frac{x^n}{n!}=1+x+\frac{x^2}{2}+\frac{x^3}{3!}+\cdots +\frac{x^n}{n!}\]
 Dann gilt $exp(x+y)=exp(x)\cdot exp(y)$.\\
 \textbf{Beweis}: $\sum_0^\infty \frac{x^n}{n!}$ ist nach dem Quotientenkriterium absolut konvergent für alle $x\in \R$
 \begin{align*}
@@ -2023,12 +2024,12 @@ zu jeder $\varepsilon$-Kugel $\stackrel{\circ}{B_{\varepsilon}}(f(a))$ existiert
 \end{itemize}
 \qed
 
-Beispiel: $f\colon\Q\rightarrow\R , f(x)\coloneqq\begin{cases}0 & x<\sqrt{2}\\1 & x>\sqrt{2}\end{cases}$\\
+Beispiel: $f\colon\Q\rightarrow\R , f(x)\coloneqq \begin{cases}0 & x<\sqrt{2}\\1 & x>\sqrt{2}\end{cases}$\\
 $f(x)$ ist stetig auf $\Q$.\\
 Beweis: Sei $a\in \Q$. Zeige $\lim_{x\rightarrow a} f(x)=f(a)$
 \begin{enumerate}[1. F{a}ll]
 \item Sei $a>\sqrt{2}$ und $(x_n)\subset \Q$, so dass $x_n\rightarrow a$.\\
-  Setze $\varepsilon \coloneqqa-\sqrt{2}>0$. Für $\varepsilon$ gibt es ein
+  Setze $\varepsilon \coloneqq a-\sqrt{2}>0$. Für $\varepsilon$ gibt es ein
   $n_0\in \N$, so dass $|x_n-a| <\varepsilon \ \forall n\geq
   n_0$. Ferner gilt $x_n>\sqrt{2}$ für $n\geq n_0$, denn $-\varepsilon
   <x_n-a<\varepsilon$ für $n\geq n_0 \Rightarrow
@@ -2119,7 +2120,7 @@ konvergent $\Rightarrow \lim x_n \in A$.\\
 \begin{itemize}
   \item["`$\Rightarrow$"'] Der Beweis erfolgt durch Kontraposition: Sei $A$ abgeschlossen\\
     Annahme: $\exists (x_n)\subset A\colon(x_n) \text{ konvergent} \Rightarrow \lim x_n \notin A$\\
-    $a\coloneqq\lim x_n$\\
+    $a\coloneqq \lim x_n$\\
     $\Rightarrow a \in X\backslash A$ offen, da $A$ nach Voraussetzung abgeschlossen.\\
     $\Rightarrow \exists \varepsilon >0 \ \stackrel{o}{B_{\varepsilon}}(a)\subset X\backslash A$\\
     Da $x_n$ gegen $a$ strebt, existiert ein $n_0\in \N$, so dass $d(x_n,a)<\varepsilon$ für $n\geq n_0$\\
@@ -2288,7 +2289,7 @@ $f$ nimmt auf $K$ ihr Minimum an.\\
 \textbf{Beweis}: Für Maximum: Nach \autoref{satz:beschr-abg} und \autoref{satz:gleichm-stetig} wissen wir: Die Tatsache, dass
 $f$ stetig ist, impliziert, dass $f(K)$ beschränkt ist.
 \begin{align*}
-  M\coloneqq\sup_{x\in K} f(x)\in\R & \Rightarrow \forall n \in \N \ \exists x_n\in K\colon f(x_n)\leq M\leq f(x_n)+\frac{1}{n}\\
+  M\coloneqq \sup_{x\in K} f(x)\in\R & \Rightarrow \forall n \in \N \ \exists x_n\in K\colon f(x_n)\leq M\leq f(x_n)+\frac{1}{n}\\
   & \stackrel{K\text{~kompakt}}{\Rightarrow} \exists \text{Teilfolge} (x_{n_k})\subset (x_n)\colon x_{n_k}\rightarrow p\in K\\
   & \stackrel{f\text{~stetig}}{\Rightarrow} f(p)=\lim_{K\rightarrow \infty} f(x_{n+k})=M
 \end{align*}
@@ -2303,7 +2304,7 @@ die Funktion $f(x)=\frac{1}{x}$. Diese hat auf dem Intervall $]0,\infty [$ weder
 \label{satz:invFunkt}
 Sei $X$ ein kompakter metrischer Raum, die Abbildung $f\colon X\rightarrow Y$ stetig und injektiv. Dann gilt:
 \[f^{-1}\colon f(X)\rightarrow X\text{ist stetig}\]
-\textbf{Beweis} $Y_0 \coloneqqf(X)$ ist nach \autoref{satz:gleichm-stetig} kompakt. Nach \autoref{satz:fkt-aquiv} genügt es,
+\textbf{Beweis} $Y_0 \coloneqq f(X)$ ist nach \autoref{satz:gleichm-stetig} kompakt. Nach \autoref{satz:fkt-aquiv} genügt es,
 zu zeigen, dass die Urbilder von abgeschlossenen Mengen wieder abgeschlossen sind.\\
 $A\subset X$ abgeschlossen $\Rightarrow (f^{-1})^{-1}(A)=f(A)$ abgeschlossen\\
 Sei $(y_n)\subset f(A), y_0\rightarrow b\in Y=f(X)$. Es ist zu zeigen, dass $b\in f(A)$.\\
@@ -2323,20 +2324,20 @@ Sei $f\colon[a,b]\rightarrow \R$ stetig mit $f(a)<0$ und $f(b)>0$ (bzw. umgekehr
 \textbf{Beweis}: Zur Beweisführung wird die Intervall-Halbierungsmethode heran gezogen:
 Sei $f(a)<0$ und $f(b)>0$. Wir definieren induktiv $[a_n,b_n]\subset [a,b], n\in \N$
 \begin{enumerate}[(i)]
-  \item $[a_n,b_n]\subset [a_{n-1},b_{n-1}], n\geq 1, [a_0,b_0]\coloneqq[a,b]$
+  \item $[a_n,b_n]\subset [a_{n-1},b_{n-1}], n\geq 1, [a_0,b_0]\coloneqq [a,b]$
   \item $b_n-a_n=2^{-n}(b-a)$
   \item $f(a_n)\leq 0, f(b_n)\geq 0$
 \end{enumerate}
 Induktionsanfang: $[a_0,b_0]=[a,b]$\\
 Induktionsschritt: $n\rightarrow n+1$\\
-Sei $[a_n,b_n]$ bereits definiert und $m\coloneqq\frac{a_n+b_n}{2}$. Dann sind folgende zwei Fälle möglich:
+Sei $[a_n,b_n]$ bereits definiert und $m\coloneqq \frac{a_n+b_n}{2}$. Dann sind folgende zwei Fälle möglich:
 \begin{enumerate}[1. F{a}ll]
-  \item $f(m)\geq 0$ Dann ist $[a_{n+1},b_{n+1}]\coloneqq[a_n,m]\subset [a_n,b_n]$
+  \item $f(m)\geq 0$ Dann ist $[a_{n+1},b_{n+1}]\coloneqq [a_n,m]\subset [a_n,b_n]$
     \begin{enumerate}[(i)]
       \item $b_{n+1}-a_{n+1}=m-a_n=\frac{a_n+b_n}{2}-a_n=\frac{1}{2}(b_n-a_n)=\frac{1}{2}2^{-n}(b-a)=2^{-(n+1)}(b-a)$
       \item $f(a_{n+1})=f(a_n)\geq 0, f(b_{n+1})=f(m)\geq 0$
     \end{enumerate}
-  \item $f(m)<0$ Dann ist $[a_{n+1},b_{n+1}]\coloneqq[m,b_{n+1}]\subset [a_n,b_n]$
+  \item $f(m)<0$ Dann ist $[a_{n+1},b_{n+1}]\coloneqq [m,b_{n+1}]\subset [a_n,b_n]$
     \begin{enumerate}[(i)]
       \item $b_{n+1}-a_{n+1}=b_n-m=b_n-\frac{a_n+b_n}{2}=\frac{1}{2}(b_n-a_n)=\frac{1}{2}2^{-n}(b-a)=2^{-(n+1)}(b-a)$
       \item $f(a_{n+1})=f(m)\leq 0, f(b_{n+1})\geq 0$
@@ -2358,7 +2359,7 @@ $\left.\begin{array}{rcl}
 \begin{Folg}
 \textbf{2. Zwischenwertsatz} Sei $f\colon[a,b]\rightarrow\R$ und $c\in \R$ liegt zwischen $f(a)$ und $f(b)$. Dann existiert
 $p\in[a,b]\colon f(p)=c$.\\
-\textbf{Beweis} Sei $f(a)<c<f(b)$. Wir definieren eine Funktion $g\colon[a,b]\rightarrow \R$ durch $g(x)\coloneqqf(x)-c$. Die
+\textbf{Beweis} Sei $f(a)<c<f(b)$. Wir definieren eine Funktion $g\colon[a,b]\rightarrow \R$ durch $g(x)\coloneqq f(x)-c$. Die
 Funktion $g$ ist stetig mit $g(a)=f(a)-c<0, g(b)=f(b)-c>0$. Dann folgt nach \autoref{satz:zws} $\exists p\in[a,b]
 \colon g(p)=f(p)-c=0\Rightarrow f(p)=c$
 \qed
@@ -2370,7 +2371,7 @@ Sei $f\colon[a,b]\rightarrow\R$ stetig mit $f([a,b])\subset [a,b]$. Dann existie
 \end{Folg}
 
 Bemerkung: Der Zwischenwertsatz gilt nicht, wenn rationale Zahlen betrachtet werden. Beispielsweise gibt es für
-die Funktion $f(x)\coloneqqx^2-2$ keinen Fixpunkt im Intervall $[0,2]$, wenn das $x$ aus den rationalen Zahlen stammt.
+die Funktion $f(x)\coloneqq x^2-2$ keinen Fixpunkt im Intervall $[0,2]$, wenn das $x$ aus den rationalen Zahlen stammt.
 
 \subsection{Ein Satz über reelle inverse Funktionen}
 \begin{definition}
@@ -2519,7 +2520,7 @@ k \text{ ungerade}\\\infty, a_0<0, k \text{ ungerade}\end{cases}\]
 
 \subsection{Exponential-, Logarithmus- und Potenzfunktionen}
 
-\[exp(x)\coloneqq\sum_{k=0}^\infty \frac{x^k}{k!}=1+x+\frac{x^2}{2}+\frac{x^3}{3!}+\frac{x^4}{4!}+\cdots\]
+\[exp(x)\coloneqq \sum_{k=0}^\infty \frac{x^k}{k!}=1+x+\frac{x^2}{2}+\frac{x^3}{3!}+\frac{x^4}{4!}+\cdots\]
 ist absolut konvergent für alle $x\in \R$. Somit definiert $exp\colon\R\rightarrow\R$ eine Funktion auf $\R$. Sie heißt
 \emph{Exponentialfunktion\index{Exponentialfunktion}}.
 
@@ -2575,7 +2576,7 @@ Für $exp\colon\R\rightarrow\R$ gelten folgende Eigenschaften:
     \textbf{$exp\colon\R\rightarrow ]0,\infty [$ bijektiv}\\
     Die Exponentialfunktion ist bijektiv, da sie streng monoton wachsend ist. Ferner gilt: $0<exp(x)<\infty$ für $x\in\R$
     (\autoref{satz:expEigenschaft})
-  \item $ln\coloneqq(exp)^{-1}; ]0,\infty [$ ist stetig und streng monoton wachsend auf jedem kompakten Intervall $[a,b]\subset ]0,
+  \item $ln\coloneqq (exp)^{-1}; ]0,\infty [$ ist stetig und streng monoton wachsend auf jedem kompakten Intervall $[a,b]\subset ]0,
     \infty [$ (nach \autoref{satz:reellInvFkt})
     und damit auch auf $]0,\infty [$\\
     $x_0<x_1 \Rightarrow f(x_0)<f(x_1)$\\
@@ -2586,7 +2587,7 @@ Für $exp\colon\R\rightarrow\R$ gelten folgende Eigenschaften:
 \subsection{Exponentialfunktion zur Basis \texorpdfstring{$a$}{a}}
 
 \begin{definition}
-\textbf{Exponentialfunktion zur Basis $a$} Sei $a>0, a\neq 1$. Dann heißt $exp_a \colon\R\rightarrow\R$ definiert durch $exp_a (x)\coloneqq
+\textbf{Exponentialfunktion zur Basis $a$} Sei $a>0, a\neq 1$. Dann heißt $exp_a \colon\R\rightarrow\R$ definiert durch $exp_a (x)\coloneqq 
 exp(x\ ln (a))$ \emph{Exponentialfunktion\index{Exponentialfunktion}} zur Basis $a$.
 \end{definition}
 
@@ -2613,7 +2614,7 @@ $f(x)=x\cdot ln(a)\quad g(x)=exp(x)\quad exp_a(x)=g(f(x))$ Die Komposition von s
     $a^p=exp_a(p)=exp_a(q\frac{p}{q})=\left(exp_a(\frac{p}{q})\right)^q\Rightarrow exp_a(\frac{p}{q})=\sqrt[q]{a^p}=a^{\frac{p}{q}}$
 \end{enumerate}
 
-Bemerkung: \autoref{satz:expa} rechtfertigt die Bezeichnung $a^x\coloneqqexp_a(x)$. Für $a=e$ hat man $e^x=exp_e(x)=exp(x)$, 
+Bemerkung: \autoref{satz:expa} rechtfertigt die Bezeichnung $a^x\coloneqq exp_a(x)$. Für $a=e$ hat man $e^x=exp_e(x)=exp(x)$, 
 da $ln(e)=1$. Die Funktionalgleichung aus \autoref{satz:expa} i) hat jetzt die Form $a^{x+y}=a^x\cdot a^y, x,y\in \R$
 
 \begin{theorem}
@@ -2631,7 +2632,7 @@ Für $a,b>0$ und $x,y\in \R$ gilt:
 
 Es gilt $exp_a \colon\R\rightarrow ]0,\infty [$ ist stetig und bijektiv für $a>0, a\neq 1$. Ferner: streng monoton wachsend
 für $a>1$ und streng monoton fallend für $a<1$.
-Die Umkehrfunktion $log_a\coloneqq(exp_a)^{-1}$ heißt \emph{Logarithmus\index{Logarithmus}} zur Basis $a$. Es gilt $log_a\colon
+Die Umkehrfunktion $log_a\coloneqq (exp_a)^{-1}$ heißt \emph{Logarithmus\index{Logarithmus}} zur Basis $a$. Es gilt $log_a\colon
 ]0,\infty [ \rightarrow \R$ ist stetig und streng monoton wachsend für $a>1$ und streng monoton fallend für $a<1$.\\
 \textbf{Beweis}: $\log_ax=\frac{ln(x)}{ln(a)}$\\
 $exp_alog_a(x)=exp(\frac{ln(x)}{ln(a)}\cdot ln (a))=exp (ln (x))=x$
@@ -2657,8 +2658,8 @@ $\C$ sei der Körper der komplexen Zahlen.
 \begin{align*}
   z_1 & = x_1+iy_1\\
   z_2 & = x_2+iy_2\\
-  z_1+z_2 & \coloneqq (x_1+x_2)+i(y_1+y_2)\\
-  z_1z_2 & \coloneqq (x_1x_2-y_1y_2)+i(x_1y_2+x_2y_1)\\
+  z_1+z_2 & \coloneqq  (x_1+x_2)+i(y_1+y_2)\\
+  z_1z_2 & \coloneqq  (x_1x_2-y_1y_2)+i(x_1y_2+x_2y_1)\\
   z_1=x_1+iy_1=z_2=x_2+iy_2 & \Leftrightarrow x_1=x_2, y_1=y_2, \Re z_1=\Re z_2, \Im z_1=\Im z_2
 \end{align*}
 
@@ -2699,10 +2700,10 @@ $\C$ sei der Körper der komplexen Zahlen.
 \end{theorem}
 
 \subsubsection{Reihen in $\C$}
-\[(z_n)\subset \C\quad s_n\coloneqq\sum_{k=0}^n z_k \quad \text{n-te Partialsumme\index{Partialsumme}}\]
-\[\sum_{k=0}^{\infty} z_k\coloneqq(s_n) \quad \text{Reihe\index{Reihe}}\]
+\[(z_n)\subset \C\quad s_n\coloneqq \sum_{k=0}^n z_k \quad \text{n-te Partialsumme\index{Partialsumme}}\]
+\[\sum_{k=0}^{\infty} z_k\coloneqq (s_n) \quad \text{Reihe\index{Reihe}}\]
 Für den Wert der Reihe gilt:
-\[\sum_{k=0}^{\infty} z_k\coloneqq\lim s_n \quad \text{falls }(s_n) \text{ konvergiert}\]
+\[\sum_{k=0}^{\infty} z_k\coloneqq \lim s_n \quad \text{falls }(s_n) \text{ konvergiert}\]
 Weiterhin gilt:
 \[\overline{\sum_{k=0}^{\infty} z_k}=\sum_{k=0}^\infty \overline{z_k}\]
 Beweis: $\overline{\lim s_n}=\overline{\lim\sum_{k=0}^\infty z_k}=\lim \overline{\sum_{k=0}^\infty
@@ -2715,7 +2716,7 @@ gleichen Aussagen wie für Reihen in $\R$.
 $\sum_{k=0}^\infty \frac{z^k}{k!}$ ist für jedes $z\in\C$ absolut konvergent, d.\,h. $\sum \frac{|z^k|}{k!}
 <\infty$.
 \begin{definition}
-\[e^z\coloneqq\text{exp}(z)=\sum_{k=0}^\infty \frac{z^k}{k!}\quad z\in\C\quad\text{exp}\colon\C\rightarrow\C\]
+\[e^z\coloneqq \text{exp}(z)=\sum_{k=0}^\infty \frac{z^k}{k!}\quad z\in\C\quad\text{exp}\colon\C\rightarrow\C\]
 \end{definition}
 
 Eigenschaften:
@@ -2744,8 +2745,8 @@ Eigenschaften:
 \begin{definition}
 Sei $x\in\R$. Dann gilt
 \begin{align*}
-\cos x & \coloneqq \Re (e^{ix})\\
-\sin x & \coloneqq \Im (e^{ix})
+\cos x & \coloneqq  \Re (e^{ix})\\
+\sin x & \coloneqq  \Im (e^{ix})
 \end{align*}
 $\cos$ heißt \emph{Kosinus\index{Kosinus}} und $\sin$ heißt \emph{Sinus\index{Sinus}}.
 \end{definition}
@@ -2775,7 +2776,7 @@ Seien $x,y\in\R$:
   \item $\left.\begin{array}{rcl}
     \cos \colon\R\rightarrow\R\\
     \sin \colon \R\rightarrow\R\end{array}\right\}$ stetig
-  \item Der Kosinus hat eine kleinste positive Nullstelle $a$ mit $1<a<2$. Man setzt $\pi\coloneqq2a\Rightarrow
+  \item Der Kosinus hat eine kleinste positive Nullstelle $a$ mit $1<a<2$. Man setzt $\pi\coloneqq 2a\Rightarrow
     \sin \frac{\pi}{2}=1$
     %Beweis aus Hefter einfuegen
   \item Kosinus und Sinus sind $2\pi$-periodisch:
@@ -2826,8 +2827,8 @@ existiert.\\
     $\lim_{x\rightarrow a}\frac{r(x)}{x-a}=0$\\
     $\Rightarrow \frac{f(x)-f(a)}{x-a}=c+\frac{r(x)}{x-a}$\\
     $\Rightarrow \lim_{x\rightarrow a} \frac{f(x)-f(a)}{x-a}=c$
-  \item["`$\Leftarrow$"'] Sei $\lim_{x\rightarrow a} \frac{f(x)-f(a)}{x-a}\coloneqqc$\\
-    $r(x)\coloneqqf(x)-f(a)-c(x-a)$\\
+  \item["`$\Leftarrow$"'] Sei $\lim_{x\rightarrow a} \frac{f(x)-f(a)}{x-a}\coloneqq c$\\
+    $r(x)\coloneqq f(x)-f(a)-c(x-a)$\\
     Dann ist $f(x)=f(a)+c(x-a)+r(x)$ und $\frac{r(x)}{x-a}=
     \frac{f(x)-f(a)}{x-a}-c\stackrel{x\rightarrow a}{\rightarrow}c-c=0$
 \end{itemize}
@@ -2931,7 +2932,7 @@ Beispiele:
   \begin{enumerate}[(1)]
     \item $f\colon D\rightarrow\R$ sei differenzierbar in $D$.\\
       Falls $f'\colon D\rightarrow\R$ in $x\in D$ differenzierbar ist, so
-      heißt $\frac{d^2 f}{dx^2}(x)=f''(x)\coloneqq(f')'(x)$ die zweite 
+      heißt $\frac{d^2 f}{dx^2}(x)=f''(x)\coloneqq (f')'(x)$ die zweite 
       Ableitung von $f$ an der Stelle $x$.
     \item Allgemein durch Induktion: $f\colon D\rightarrow\R$ heißt $k$-mal
       differenzierbar in $x\in D\perdef \exists \varepsilon>0
@@ -2943,7 +2944,7 @@ Beispiele:
 
 \paragraph{Leibnitzsche Produktformel}
 $f,g\colon D\rightarrow\R$ sind $n$-mal differenzierbar. Dann $(f\circ g)^{(n)}
-=\sum_{k=0}^n \binom{n}{k}f^{(k)}(x)g^{n-k)}(x)$ mit $f^{(0)}\coloneqqf$
+=\sum_{k=0}^n \binom{n}{k}f^{(k)}(x)g^{n-k)}(x)$ mit $f^{(0)}\coloneqq f$
 
 \section{Lokale Extrema, Mittelwertsatz, Konvexität}
 \begin{definition}
@@ -2966,8 +2967,8 @@ $f,g\colon D\rightarrow\R$ sind $n$-mal differenzierbar. Dann $(f\circ g)^{(n)}
   \forall\xi\in D\colon f(\xi)\leq f(x)\]
   Somit
   \begin{align*}
-    f'_+(x) & \coloneqq & \lim_{\xi\searrow x}\frac{f(\xi)-f(x)}{\xi-x}\leq 0 \text{ da } f(\xi)\leq f(x)\\
-    f'_-(x) & \coloneqq & \lim_{\xi\nearrow x}\frac{f(\xi)-f(x)}{\xi-x}\geq 0 \text{ da } f(\xi)\geq f(x)
+    f'_+(x) & \coloneqq  & \lim_{\xi\searrow x}\frac{f(\xi)-f(x)}{\xi-x}\leq 0 \text{ da } f(\xi)\leq f(x)\\
+    f'_-(x) & \coloneqq  & \lim_{\xi\nearrow x}\frac{f(\xi)-f(x)}{\xi-x}\geq 0 \text{ da } f(\xi)\geq f(x)
   \end{align*}
   Da $f$ in $x$ differenzierbar folgt, dass $f'_+(x)-f'_-(x)=0$
   \qed
@@ -3009,7 +3010,7 @@ Bemerkungen:
       Dann existiert $\xi\in]a,b[\colon\frac{f(b)-f(a)}{g(b)-g(a)}=
       \frac{f'(\xi)}{g'(\xi)}$.\\
       \textbf{Beweis}: Wegen $g'\neq 0$ in $]a,b[$ folgt nach dem 
-      ersten Punkt $g(b)\neq g(a)$. Betrachten $\varphi(x)\coloneqqf(x)-f(x)-
+      ersten Punkt $g(b)\neq g(a)$. Betrachten $\varphi(x)\coloneqq f(x)-f(x)-
       \frac{f(b)-f(a)}{g(b)-g(a)}(g(x)-g(a))$. Die Funktion $\varphi\colon
       [a,b]\rightarrow\R$ ist stetig und in $]a,b[$ differenzierbar und
       es gilt $\varphi (a)=\varphi(b)=0\Rightarrow \exists\xi\in]a,b[\colon
@@ -3119,7 +3120,7 @@ Seien $x_0,x_1\in D, x_0<x_1, x=(1-\Theta)x_0+\Theta x_1\Rightarrow
 \Theta=\frac{x-x_0}{x_1-x_0}, 1-\Theta=\frac{x_1-x}{x_1-x_0}, 0<\Theta<1$\\
 $f(x)=f( (1-\Theta)x_0+\Theta x_1)\leq (1-\Theta)f(x_0)+\Theta f(x_1)
 =\frac{x_1-x}{x_1-x_0}f(x_0)+\frac{x-x_0}{x_1-x_0}f(x_1)$\\
-$y_0\coloneqqf(x_0), y_1\coloneqqf(x_1), y=\frac{x_1-x}{x_1-x_0}y_0+\frac{x-x_0}{x_1-x_0}y_1
+$y_0\coloneqq f(x_0), y_1\coloneqq f(x_1), y=\frac{x_1-x}{x_1-x_0}y_0+\frac{x-x_0}{x_1-x_0}y_1
 \Leftrightarrow$
 \[\frac{y-y_0}{y_1-y_0}=\frac{x-x_0}{x_1-x_0}\]
 Eine lineare Funktion $f(x)=ax+b$ ist sowohl konvex als auch konkav.
@@ -3143,7 +3144,7 @@ Eine lineare Funktion $f(x)=ax+b$ ist sowohl konvex als auch konkav.
       \textbf{Beweis}: \begin{itemize}
 	\item["`$\Rightarrow$"'] Sei $f\colon D\rightarrow\R$ konvex. Man
 	  trifft die Annahme, dass $f''(x)<0$ \emph{nicht} gilt und
-	  setzt $\varphi(x)\coloneqqf(x)-f'(x_0)(x-x_0)$ für $x_0\in D$. Dann
+	  setzt $\varphi(x)\coloneqq f(x)-f'(x_0)(x-x_0)$ für $x_0\in D$. Dann
 	  hat man $\varphi\colon D\rightarrow\R$ ist zweimal differenzierbar
 	  mit $\varphi'(x_0)=0$ und $\varphi''(x_0)=f''(x)<0$. Nach
 	  \autoref{satz:lokExtrema} hat $\varphi$ in $x_0$ ein
@@ -3213,7 +3214,7 @@ Bemerkung:
 	f(x_0+h) & < & f(x_0)+f'(x_0)h \text{ für } h<0\\
 	f(x_0+h) & < & f(x_0)+f'(x_0)h \text{ für } h>0
       \end{align*}
-      $h\coloneqqx-x_0$\\
+      $h\coloneqq x-x_0$\\
       Tangente in $(x_0,f(x_0))$: $y=f(x_0)+f'(x_0)(x-x_0)$
     \item Sei $f\colon]a,b[\rightarrow\R$ differenzierbar. Dann besitzt $f$
       in $x_0\in]a,b[$ einen Wendepunkt, wenn $f'\colon]a,b[\rightarrow\R$
@@ -3276,11 +3277,11 @@ möglichst einfache Funktionen (Polynome).
 	p^{(k)}(0)&=& 0 \quad\text{für } k\geq n+1\\
 	&\Rightarrow & p(x)=\sum_{k-0}^n \frac{p^{(k)}(0)}{k!}x^k
       \end{align*}
-    \item Sei $x_0$ beliebig. Setzen: $q(y)\coloneqqp(y+x_0)$. Es gilt $q^{(k)}
+    \item Sei $x_0$ beliebig. Setzen: $q(y)\coloneqq p(y+x_0)$. Es gilt $q^{(k)}
       (y)=p^{(k)}(y+x_0), q^{(k)}(y)=p^{(k)}(x_0)$.\\
       $p(y+x_0)=q(y)=\sum_{k=0}^n \frac{p^{(k)}(0)}{k!}y^k=\sum_{k=0}^n
       \frac{p^{(k)}(x_0)}{k!}y^k$\\
-      $y\coloneqqx-x_0, p(x)=\sum_{k=0}^n \frac{p^{(k)}(0)}{k!}(x-x_0)^k$
+      $y\coloneqq x-x_0, p(x)=\sum_{k=0}^n \frac{p^{(k)}(0)}{k!}(x-x_0)^k$
   \end{enumerate}
   \qed
 \end{lemma}
@@ -3296,13 +3297,13 @@ zur Approximation von $f$ in der "`Nähe"' von $x_0$.
       \in I$ eine $n$-mal differenzierbare Funktion. Dann heißt:
       \[T_n(f;x_0)\colon\R\rightarrow\R\]
       definiert durch
-      \[T_n(f;x_0)\coloneqq\sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!}(x-x_0)^k\]
+      \[T_n(f;x_0)\coloneqq \sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!}(x-x_0)^k\]
       $n$-tes \emph{Taylorpolynom\index{Taylorpolynom}} von $f$ im
       Punkt $x_0$.
     \item Taylorreihe von $f$ in $x$ mit Entwicklungspunkt $x_0$\\
       Sei $f\colon I\rightarrow\R$ beliebig oft differenzierbar in $x\in I$.
       Dann heißt
-      \[T(f;x_0)(x)\coloneqq\sum_{k=0}^\infty \frac{f^{(k)}(x_0)}{k!}(x-x_0)^k\]
+      \[T(f;x_0)(x)\coloneqq \sum_{k=0}^\infty \frac{f^{(k)}(x_0)}{k!}(x-x_0)^k\]
       \emph{Taylorreihe\index{Taylorreihe}} von $f$ in $x$ mit
       Entwicklungspunkt $x_0$.
     \item Gilt für eine unendlich oft differenzierbare Funktion 
@@ -3333,7 +3334,7 @@ Beispiele:
     taylorentwickelbar.
 \end{enumerate}
 
-$R_n(f;x_0)=f-T_n(f;x_0)$ Restglied kürzer $R_n\coloneqqR_n(f;x_0)$\\
+$R_n(f;x_0)=f-T_n(f;x_0)$ Restglied kürzer $R_n\coloneqq R_n(f;x_0)$\\
 $f\colon I\rightarrow\R$ in $x_0$ genau dann taylorentwickelbar, wenn
 $\lim_{n\rightarrow\infty} R_n(x)=0$
 
@@ -3351,7 +3352,7 @@ $\lim_{n\rightarrow\infty} R_n(x)=0$
   \[f(x)=\sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!}(x-x_0)+R_n(x)\]
   (\emph{Taylorsche Formel\index{Formel!Taylorsche}})\\
   \textbf{Beweis}:
-  \[F(t)\coloneqqf(x)-\sum_{k=0}^n \frac{f^{(k)}(t)}{k!}(x-t)^k\qquad G(t)\coloneqq(x-t)^p\]
+  \[F(t)\coloneqq f(x)-\sum_{k=0}^n \frac{f^{(k)}(t)}{k!}(x-t)^k\qquad G(t)\coloneqq (x-t)^p\]
   Dann ist $F(x_0)-\underbrace{F(x)}_{=0}=R_n(x), G(x_0)-\underbrace{G(x)}_{=0}
   =(x-x_0)^p, F'(t)=-\sum_{k=0}^n \frac{f^{(k+1)}t}{k!}(x-t)^k +
   \sum_{k=1}^n \frac{f^{(k)}t}{k!}k(x-t)^{k-1}=-\frac{f^{(n+1)}(t)}{n!}
@@ -3478,7 +3479,7 @@ Folgerung: Für $1\leq y<\infty$ gilt:
   \widetilde{R_n}(y) &=& \left( \frac{\Theta_1}{2n+1}+\frac{\Theta_2}{2}(y+1) \right)
   \left( \frac{y-1}{y+1} \right)^{2n+1}\quad 0<\Theta_1,\Theta_2<1
 \end{align*}
-Beweis: Sei $1\leq y <\infty$ und $x\coloneqq\frac{y-1}{y+1}$. Es gilt $0\leq x<1$
+Beweis: Sei $1\leq y <\infty$ und $x\coloneqq \frac{y-1}{y+1}$. Es gilt $0\leq x<1$
 und $y=\frac{1+x}{1-x}$:
 \begin{align*}
   \ln(1+x) &=& \sum_{k=1}^{2n}\frac{(-1)^{k-1}}{k}x^k+R_{2n}(x)\\
@@ -3518,24 +3519,24 @@ dass man eine Fläche unterhalb einer Kurve berechnen möchte:
 
 Zur Untersuchung dieses Problems braucht man diverse Variablen:
 \begin{description}
-  \item[Zerlegung\index{Zerlegung}] $\ZZ\coloneqq\{I_1,\cdots,I_n\}$\\
-    $I_i\coloneqq[x_{i-1},x_i]$ mit $a=x_0<x_1<\cdots<x_n=b$
+  \item[Zerlegung\index{Zerlegung}] $\ZZ\coloneqq \{I_1,\cdots,I_n\}$\\
+    $I_i\coloneqq [x_{i-1},x_i]$ mit $a=x_0<x_1<\cdots<x_n=b$
   \item[Verfeinerung\index{Verfeinerung}] $\ZZ'\perdef\forall
     I'\in\ZZ'\,\exists I\in\ZZ\colon I'\subset I$\\
     Schreibweise: $\ZZ\prec\ZZ'$
-  \item[Länge des Intervalls] $I=[c,d]\colon l(I)\coloneqqd-c$
-  \item[Durchmesser der Zerlegung] $d(\ZZ)\coloneqq\max\{l(I)\colon
+  \item[Länge des Intervalls] $I=[c,d]\colon l(I)\coloneqq d-c$
+  \item[Durchmesser der Zerlegung] $d(\ZZ)\coloneqq \max\{l(I)\colon
     I\in\ZZ\}$
-  \item[Überlagerung von zwei Zerlegungen] $\ZZ\coloneqq\{I=I'\cap I''\colon
+  \item[Überlagerung von zwei Zerlegungen] $\ZZ\coloneqq \{I=I'\cap I''\colon
     I'\in\ZZ_1, I''\in\ZZ_2, l(I)>0\}$\\
     $\ZZ$ ist wieder eine Zerlegung und $\ZZ_1,\ZZ_2\prec\ZZ$\\
     Schreibweise: $\ZZ=\ZZ_1\vee\ZZ_2$
-  \item[Menge der beschränkten Funktionen] $B[a,b]\coloneqq\{f\colon
+  \item[Menge der beschränkten Funktionen] $B[a,b]\coloneqq \{f\colon
     [a,b]\rightarrow\R\colon f\text{ beschränkt}\}$
   \item[Infimum/Supremum\index{Infimum!Integration}\index{Supremum!Integration}]
     Sei $M\subset[a,b]$\\
-    \[\underline{f}(M)\coloneqq\inf\{f(x)\colon x\in M\}\]
-    \[\overline{f}(M)\coloneqq\sup\{f(x)\colon x\in M\}\]
+    \[\underline{f}(M)\coloneqq \inf\{f(x)\colon x\in M\}\]
+    \[\overline{f}(M)\coloneqq \sup\{f(x)\colon x\in M\}\]
   \item[Flächeninhalt]
     \emph{Untersumme\index{Untersumme}}:
     \[\underline{S}(f;\ZZ)=\sum_{I\in\ZZ}\underline{f}(I)l(I)\]
@@ -3576,9 +3577,9 @@ Zur Untersuchung dieses Problems braucht man diverse Variablen:
 
 \begin{definition}
   Sei $f$ eine beschränkte Funktion auf $[a,b]$. Dann heissen die Größen
-  \[\int_{\underline{a}}^b fdx \coloneqq \sup_\ZZ \underline{S}(f;\ZZ)\]
+  \[\int_{\underline{a}}^b fdx \coloneqq  \sup_\ZZ \underline{S}(f;\ZZ)\]
   und
-  \[\int_a^{\overline{b}} fdx \coloneqq \inf_\ZZ \overline{S}(f;\ZZ)\]
+  \[\int_a^{\overline{b}} fdx \coloneqq  \inf_\ZZ \overline{S}(f;\ZZ)\]
   wobei $\ZZ$ die Menge aller Zerlegungen von $[a,b]$ durchläuft, unteres
   und oberes \emph{Darbouxsches Integral\index{Integral!Darbouxsches}}.
 \end{definition}
@@ -3591,7 +3592,7 @@ Zur Untersuchung dieses Problems braucht man diverse Variablen:
 \end{remark}
 
 \begin{beispiel}
-$f(x)\coloneqq
+$f(x)\coloneqq 
 \begin{cases}
   1 & x\in [0,1], x\, \text{irrational}\\
   0 & x\in [0,1], x\, \text{rational}
@@ -3651,7 +3652,7 @@ heißt \emph{Auswahlfunktion\index{Auswahlfunktion}}. Sie ordnet jedem
 Intervall $I$ ein Element $\xi(I)$ des Intervalls zu.
 
 Zwischensumme:
-\[S(f;\ZZ;\xi)\coloneqq\sum_{I\in\ZZ} f(\xi(I)) l(I)\]
+\[S(f;\ZZ;\xi)\coloneqq \sum_{I\in\ZZ} f(\xi(I)) l(I)\]
 heißt \emph{Zwischensumme\index{Zwischensumme}} von $f$ mit der Zerlegung
 $\ZZ$ und der Auswahlfunktion $\xi\colon\ZZ\rightarrow[a,b]$.
 
@@ -3729,7 +3730,7 @@ Ein Beispiel zur numerischen Auswertung eines R-Integrals über ZWS ist die
 Funktion $f(x)=x^\alpha$.
 
 \subsection{Eigenschaften des R-Integrals}
-\[\RR[a,b]\coloneqq\{f\in B[a,b] | f \text{ ist R-integrierbar}\}\]
+\[\RR[a,b]\coloneqq \{f\in B[a,b] | f \text{ ist R-integrierbar}\}\]
 
 \begin{theorem}
   \begin{enumerate}
@@ -3757,7 +3758,7 @@ Funktion $f(x)=x^\alpha$.
 
 \begin{definition}
   Sei $f\in\RR[a,b]$ und $x_0\in[a,b]$. Dann heißt
-  \[F\colon[a,b]\rightarrow\R\text{ definiert durch } F(x)\coloneqq\int_{x_0}^x fdx\,
+  \[F\colon[a,b]\rightarrow\R\text{ definiert durch } F(x)\coloneqq \int_{x_0}^x fdx\,
   x\in[a,b]\]
   \emph{unbestimmtes Integral\index{Integral!unbestimmtes}}.
 \end{definition}
